# meet-recorder

./: .env.example  CLAUDE.md  Makefile  README.md  blackhole-python-guide.md  com.alisson.meet-recorder.plist  config.example.yaml  crash-recovery-idea.md  exemplo-run.sh  exemplo.plist  main.py  pipeline-transcricao.md  pyproject.toml  run.sh  screencapture-guide.md
.github/workflows/: ci.yml
docs/: prompts.md
meet_recorder/: calendar.py  config.py  consolecolor.py  drive.py  handlers.py  ledger.py  logger.py  meet_ingest.py  menubar.py  recorder.py  sck_capture.py  tools.py  transcriber.py
openspec/changes/add-recording-prompt-delay/: design.md  proposal.md  tasks.md
openspec/changes/add-test-coverage/: design.md  proposal.md
openspec/changes/enrich-prompts-with-calendar-event/: design.md  proposal.md  tasks.md
openspec/changes/ingest-meet-transcripts/: design.md  proposal.md  tasks.md
openspec/changes/integrate-google-calendar/: design.md  proposal.md  tasks.md
openspec/changes/migrate-to-screencapturekit/: proposal.md  tasks.md
openspec/changes/split-autorecord-poll-and-check-intervals/: tasks.md
openspec/changes/use-recording-start-time/: design.md  proposal.md
openspec/specs/audio-capture/: spec.md
openspec/specs/calendar-integration/: spec.md
openspec/specs/crash-recovery/: spec.md
openspec/specs/menubar-app/: spec.md
tests/: test_calendar.py  test_config.py  test_drive.py  test_handlers.py  test_ledger.py  test_main.py  test_meet_ingest.py  test_menubar.py  test_recorder.py  test_sck_capture.py  test_tools.py  test_transcriber.py
(+51 files in other folders)
