[tool.poetry]
name = "meet_recorder"
version = "0.1.0"
description = ""
authors = ["Alisson R. Perez <756802+alissonperez@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fire = "^0.7.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
sounddevice = "^0.5.5"
numpy = "^2.5.1"
soundfile = "^0.14.0"
rumps = "^0.4.0"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.4"
ruff = "^0.14.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
