[tool.poetry]
name = "meet_recorder"
version = "0.1.0"
description = ""
authors = ["Alisson R. Perez <756802+alissonperez@users.noreply.github.com>"]
readme = "README.md"
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.13"
fire = "^0.7.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
sounddevice = "^0.5.5"
numpy = "^2.5.1"
soundfile = "^0.14.0"
rumps = "^0.4.0"
python-slugify = "^8.0.4"
pyyaml = "^6.0.2"
httpx = "^0.28.1"
openai = "^1.59.6"
google-api-python-client = "^2.100.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
pyobjc-framework-screencapturekit = "^12.2.1"
pyobjc-framework-coremedia = "^12.2.1"
pyobjc-framework-quartz = "^12.2.1"
pyobjc-framework-libdispatch = "^12.2.1"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.4"
ruff = "^0.14.5"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
